# esolangs-rs

./: Cargo.toml  README.md  todo.md
emmental/: Cargo.toml
emmental/src/: io.rs  lib.rs  queue.rs  state.rs
mascarpone/: Cargo.toml
mascarpone/proptest-regressions/: state.txt
mascarpone/src/: interpreter.rs  lib.rs  operation.rs  stack.rs  state.rs
src/: interpreter.rs  lib.rs  stack.rs
