[package]
name = "mascarpone"
version = "0.1.0"
authors = ["Daan Rijks <daanrijks@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
utf8-chars = "1.0.0"

[dev-dependencies]
proptest = "0.10.1"
